--- a/TakeFood.ApiGateWay.Mobile/TakeFood.ApiGateWay.Mobile.csproj
+++ b/TakeFood.ApiGateWay.Mobile/TakeFood.ApiGateWay.Mobile.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
 		<PackageReference Include="MMLib.SwaggerForOcelot" Version="6.0.0" />
 		<PackageReference Include="Ocelot" Version="18.0.0" />
 		<PackageReference Include="Ocelot.Provider.Polly" Version="18.0.0" />
